# strip-whitespace

./: .gitignore  .prettierignore  Cargo.toml  FUZZING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.cargo/: config.toml
.changeset/: config.json  lucky-parrots-move.md  tidy-carrots-film.md  witty-pants-marry.md
.claude/: settings.local.json
.github/workflows/: ci.yml  fuzz.yml  release.yml
crates/core/: Cargo.toml  README.md
crates/core/examples/: fixtures.rs  parse-astro.rs  parse.rs  strip-astro.rs  strip.rs
crates/core/src/: alloc.rs  edit.rs  lib.rs  parse.rs  strip.rs  utf16.rs
crates/core/tests/: fixtures.rs
crates/fuzz/: Cargo.toml  README.md
crates/fuzz/fuzz_targets/: strip.rs  strip_no_sourcemap.rs  strip_sourcemap_create.rs  strip_sourcemap_roundtrip.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
examples/e2e/: astro.config.ts  package.json
examples/e2e-astro/: .gitignore  astro.config.ts  package.json  tsconfig.json
examples/e2e-astro/snapshots/default/: attributes.html  docs.html  error.html  index.html  lists.html  mixed-content.html  slots.html  svelte.html  vue.html
examples/e2e-astro/snapshots/none/: attributes.html  docs.html  error.html  index.html  lists.html  mixed-content.html  slots.html  svelte.html  vue.html
examples/e2e-astro/src/: content.config.ts
examples/e2e-astro/src/components/: AttributesDemo.astro  ConditionalListDemo.astro  MixedContentDemo.astro  SlotsDemo.astro  SvelteCounter.svelte  SvelteHello.svelte  VueCounter.vue  VueHello.vue  WhitespaceDemo.astro
examples/e2e-astro/src/layouts/: Layout.astro
examples/e2e-astro/src/pages/: attributes.astro  error.astro  index.astro  lists.astro  mixed-content.astro  slots.astro  svelte.astro  vue.astro
fixtures/: complex.astro  complex.out.astro  complex.out.astro.map  complex.out.svelte  complex.out.svelte.map  complex.svelte  components.astro  components.out.astro  components.out.astro.map  components.out.svelte  components.out.svelte.map  components.svelte  simple.astro  simple.out.astro  simple.out.astro.map  simple.out.svelte  simple.out.svelte.map  simple.svelte  unicode.astro  unicode.out.astro  unicode.out.astro.map  unicode.out.svelte  unicode.out.svelte.map  unicode.svelte  whitespace.astro  whitespace.out.astro  whitespace.out.astro.map  whitespace.out.svelte  whitespace.out.svelte.map  whitespace.svelte
fuzz/: Cargo.toml
scripts/: fuzz-win.ps1  pack-meta.mjs
(+58 files in other folders)
