[package]
name = "astro-strip-whitespace-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
astro-strip-whitespace = { path = "../core" }
libfuzzer-sys = "0.4"
serde_json = "1"

[[bin]]
name = "strip_no_sourcemap"
path = "fuzz_targets/strip_no_sourcemap.rs"
test = false
doc = false

[[bin]]
name = "strip_sourcemap_create"
path = "fuzz_targets/strip_sourcemap_create.rs"
test = false
doc = false

[[bin]]
name = "strip_sourcemap_roundtrip"
path = "fuzz_targets/strip_sourcemap_roundtrip.rs"
test = false
doc = false
