[package]
name = "strip-whitespace-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
strip-whitespace = { path = "../core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
tsify = { version = "0.5", features = ["js"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
